npm run deploy github page 雲端部屬成功

--- a/my-activity-page/package.json
+++ b/my-activity-page/package.json
@@ -1,5 +1,6 @@
 {
-  "homepage": "https://Jocelyn-Bruni.github.io/my-activity-page",
+  "homepage": "https://bruni0219.github.io/Learning-React/",
+
   "name": "my-activity-page",
   "version": "0.1.0",
   "private": true,
